# app/Http/Controllers/MealIngredientsController.php
@@ -11,6 +11,7 @@ class MealIngredientsController extends Controller
     /**
      * @SWG\Get(
      *     path="/meals/{meal}/ingredients",
+     *     tags={"Associate ingredient to meal"},
      *     description="Return a list of ingredients",
      *     summary="List all ingredients associated with the meal",
      *     @SWG\Parameter(
@@ -42,9 +43,10 @@ class MealIngredientsController extends Controller
 
     /**
      * @SWG\Get(
-     *     path="meals/{meal}/ingredients/{ingredient}",
+     *     path="/meals/{meal}/ingredients/{ingredient}",
+     *     tags={"Associate ingredient to meal"},
      *     description="Show the specific ingredient associated to a meal.",
-     *     summary="Read one ingredient",
+     *     summary="Read one ingredient associate to a meal",
      *     @SWG\Parameter(
      *         name="meal",
      *         in="path",
@@ -84,8 +86,9 @@ class MealIngredientsController extends Controller
     /**
      * @SWG\Post(
      *     path="/meals/{meal}/ingredients/{ingredient}",
+     *     tags={"Associate ingredient to meal"},
      *     description="Create a new association between meal and ingredient resource",
-     *     summary="Create one meal",
+     *     summary="Associate one ingredient associate to meal",
      *     @SWG\Parameter(
      *         name="meal",
      *         in="path",
@@ -129,8 +132,9 @@ class MealIngredientsController extends Controller
     /**
      * @SWG\Delete(
      *     path="/meals/{meal}/ingredients/{ingredient}",
+     *     tags={"Associate ingredient to meal"},
      *     description="A meal resource will be deleted",
-     *     summary="Delete one meal.",
+     *     summary="Disassociation one allergen of one  meal.",
      *     @SWG\Parameter(
      *         name="meal",
      *         in="path",
